Update for Patch v3.10.1 - checksum: 9758

--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -24,7 +24,7 @@
  add_research_options_galactic_wonders_utopia:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวนและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดมหึมาที่ทรงพลังอย่างเหลือเชื่อ"
  add_research_options_galactic_wonders_utopia_megacorp:0 "ตัวเลือกการวิจัยที่ได้รับ:\n£engineering_research£§Y$tech_ring_world$§!\n£physics_research£§Y$tech_matter_decompressor$§!\n£physics_research£§Y$tech_dyson_sphere$§!\nโลกวงแหวน,เครื่องดึงมวลสารจากหลุมดำและทรงกลมไดสัน ต่างก็เป็นสิ่งก่อสร้างขนาดมหึมาที่ทรงพลังอย่างเหลือเชื่อ"
  RELICS:0 "$relics$"
- EXCEPTIONAL_MATERIALS: "Exceptional Materials"
+ EXCEPTIONAL_MATERIALS: "วัสดุพิเศษ"
  EXCEPTIONAL_MATERIALS_DESC: "Exceptional Materials are rare and valuable resources that can be gained through scientific exploration."
  MINOR_ARTIFACTS:0 "ศิลปวัตถุชั้นรอง"
  RELICS_FOUND:0 "วัตถุโบราณที่ค้นพบ"
@@ -223,9 +223,9 @@
  arcane_insight:0 "ข้อมูลเชิงลึก Arcane"
  tech_arcane_deciphering:0 "การถอดรหัสที่ซ่อนเอาไว้"
  tech_arcane_deciphering_desc:0 "Various artifacts and technologies functioning by arcane means that cannot be understood or replicated... at least not by conventional science as it is known to us."
- artifact_proclaim_religious_finding:0 "ประกาศการเปิดเผยทางศาสนา"
- artifact_proclaim_religious_finding_desc:0 "The discovery of artifacts far predating our own civilization has given indisputable proof of our beliefs."
- proclaim_religious_finding:0 "Proclaimed Religious Revelation"
+ artifact_proclaim_religious_finding:0 "ประกาศเปิดเผยทางศาสนา"
+ artifact_proclaim_religious_finding_desc:0 "การค้นพบสิ่งประดิษฐ์ที่มีมาก่อนอารยธรรมของเราเองได้ให้หลักฐานยืนยันความเชื่อของเราอย่างเถียงไม่ได้"
+ proclaim_religious_finding:0 "ประกาศเปิดเผยทางศาสนา"
  artifact_celebrate_diversity:0 "เฉลิมฉลองความหลากหลาย"
  artifact_celebrate_diversity_desc:0 "Display some of our minor artifacts to show the diversity of life in the galaxy."
  celebrate_diversity:0 "เฉลิมฉลองความหลากหลาย"
