--- a/mod/thmod/localisation/english/astral_rifts_3_l_english.yml
+++ b/mod/thmod/localisation/english/astral_rifts_3_l_english.yml
@@ -6,7 +6,7 @@
  astral_rift.3000.b: "Contact the orbiting fleet."
  NAME_Baol: "Baol"
  NAME_Baol_leader: "Oakenstalk"
- baol_leader_desc: "§Y[Root.GetName]§! is [Root.An_Ethic_Class] we met in an Astral Rift. [Root.GetSheHeCap] was a respected general in the war against the Grunur."
+ baol_leader_desc: "§Y[Root.GetName]§! is [Root.An_Ethic_Class] we met in an Astral Rift. They were a respected general in the war against the Grunur."
  baol_leader_catch_phrase: "I will assist as necessary."
  edict_astral_cloaking: "Astral Cloaking"
  edict_astral_cloaking_desc: "Astral threads used in cloaking field generators partially 'reflect' our ships into other dimensions, making them even more difficult to detect in this one."
