--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -111,8 +111,8 @@
  PROPOSE_RESOLUTION_CONFIRMATION_DESC:3 "จะต้องใช้ $VALUE|0Y$ ของจักรวรรดิเรา เพื่อเสนอญัตตินี้ เราจะบรรจุลงในคิวญัตติ?"
  WARTARGET_ALLIES_DESC:0 "The Allies of your War Target will also be drawn into War against us."
  ORDER_OF_ROTATION:0 "ลำดับการหมุนเวียน:"
- NEW_FEDERATION_PRESIDENT_CHOSEN_TITLE:0 "New Federation President"
- NEW_FEDERATION_PRESIDENT_CHOSEN:1 "The $PRESIDENT|H$ has been chosen as the new President of the $FEDERATION|H$."
+ NEW_FEDERATION_PRESIDENT_CHOSEN_TITLE:0 "ประธานใหม่ของสหพันธ์"
+ NEW_FEDERATION_PRESIDENT_CHOSEN:1 "$PRESIDENT|H$ ได้รับเลือกเป็นประธานของ $FEDERATION|H$"
  WITHDRAW_RESOLUTION_POPUP_TITLE:0 "Withdraw Resolution"
  WITHDRAW_RESOLUTION_POPUP_DESC:0 "Are you sure you wish to Withdraw your Resolution? £influence£ Influence spent to propose it will not be refunded, but you will be able to propose a different resolution."
  FOUNDER_SPECIES_ON_TOP_TITLE:0 "Founder Species On Top"
