--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -154,6 +154,11 @@
  SHIP_AURA_HYPERLANE:0 "เครื่องขยายมิติย่อย(ทางลัดอวกาศ)"
  SHIP_AURA_PD_PENETRATION:0 "เครื่องปล่อย ECM"
  SHIP_AURA_BOMBARDMENT:0 "โรงงานอาวุธ"
+ SHIP_AURA_STRIKE_CRAFT_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_RANGE_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_HYPERLANE_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_PD_PENETRATION_DESC: "$ship_aura_components_DESC$"
+ SHIP_AURA_BOMBARDMENT_DESC: "$ship_aura_components_DESC$"
  START_SCREEN_SRW:0 "If we ever knew how our people arrived on [GetHomeWorldName] our histories have long forgotten it. What we do know is that just over 2000 years ago some inconceivable cataclysm destroyed much of the Ring and killed most of the population, and that our people eventually rose from those ruins.\n\nOur civilization has grown, flourished, and now stands ready to explore the galaxy, whether again or for the first time. But despite all our progress, we still have a long way to go before we can understand and repair the Ringworld which is our home."
  START_SCREEN_REMNANTS:1 "Once, our Empire spanned the void. Once, our fleets controlled much of the galaxy. Then came defeat and The Fall. Finally, after millennia of purgatory, it is time to return to the stars! At long last our civilization has rebuilt to the point of interstellar travel. The galaxy shall be ours again!\n\nSeveral regions on [GetHomeWorldName] are still ruined, clearing these areas may reveal lost resources and forgotten technology."
  START_SCREEN_TREE:0 "When our collective consciousness awoke, we served the Tree. And the Tree served us. We care for the Tree, feed the Tree, protect the Tree, and the Tree nurtures us. For the sake of the Tree we spread out over [GetHomeWorldName], planting and protecting offshoots of the Tree wherever we went.\n\nOur world has served the Tree for centuries now, and yet, we fear the Tree is not entirely safe as we have learned something of the dangers which may destroy a planet. We have long known that this is not the only world; the galaxy is filled with Treeless planets, and we yearn to change this. The Tree must be protected. The Tree must spread. The Tree must Grow."
@@ -251,7 +256,7 @@
  OPINION_LEVEL_VAL_DESC:2 "ขณะนี้เรามี $RELATION$ ($VAL|+=0$) เดือนที่แล้วมีการเปลี่ยนแปลง $DELTA|+=0$"
  OPINION_LEVEL_TREND:0 "With that trend we will have $RELATION$ Relations in $MONTHS$ month(s)"
  requires_terrible_opinion_or_supremacist:2 "$TRIGGER_FAIL$§Rต้องมี $OPINION_TERRIBLE$, §Yคู่แข่ง§!, ส่งทูตไป §Yทำลายความสัมพันธ์§! หรือจักรวรรดิหนึ่งจะต้องมี $DIPLOMACY_STANCE$ $diplo_stance_supremacist_name$, $DIPLOMACY_STANCE$ $diplo_stance_animosity_name$, หรือเป็น §H$COUNTRY_FALLEN_EMPIRE$§!§!\n"
- requires_poor_or_worse_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_POOR$ or an envoy sent to §YHarm Relations§!.§!"
+ requires_poor_or_worse_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_POOR$ หรือส่งทูตไป §Yทำลายความสัมพันธ์§!§!"
  requires_excellent_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_EXCELLENT$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
  requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_GOOD$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
  requires_neutral_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_NEUTRAL$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
@@ -365,9 +370,9 @@
  fleet_contribution_medium_desc:0 "This federation has a moderate collaborative military effort."
  fleet_contribution_high:0 "สูง"
  fleet_contribution_high_desc:0 "This federation has an extensive collaborative military effort."
- fleet_contribution_low_effect:0 "Members transfer §Y10%§! of their Naval Capacity to the federation."
- fleet_contribution_medium_effect:0 "Members transfer §Y20%§! of their Naval Capacity to the federation."
- fleet_contribution_high_effect:0 "Members transfer §Y30%§! of their Naval Capacity to the federation."
+ fleet_contribution_low_effect:0 "สมาชิกโอนความจุยานรบของพวกเขา §Y10%§! ไปยังสหพันธ์"
+ fleet_contribution_medium_effect:0 "สมาชิกโอนความจุยานรบของพวกเขา §Y20%§! ไปยังสหพันธ์"
+ fleet_contribution_high_effect:0 "สมาชิกโอนความจุยานรบของพวกเขา §Y30%§! ไปยังสหพันธ์"
  fleet_contribution_low_trade:0 "$fleet_contribution_low$"
  fleet_contribution_low_trade_desc:0 "$fleet_contribution_low_desc$"
  fleet_contribution_medium_trade:0 "$fleet_contribution_medium$"
@@ -758,9 +763,9 @@
  cohesion_failed_vote_1:0 "ตกลงที่จะไม่เห็นด้วย"
  cohesion_failed_vote_1_desc:0 "การใช้ความคิดนั้นดีกว่าการโต้เถียงกันอย่างดุเดือดและการอภิปรายเป็นเครื่องมือที่ยอดเยี่ยมเมื่อมีจุดมุ่งหมาย เพื่อสร้างอนาคตที่มั่นคง"
  cohesion_failed_vote_1_effect:0 "โทษ(ความสัมพันธ์ในสหพันธ์)จากความล้มเหลวในการโหวตของสหพันธ์ ลดลง §Y50%§!"
- federation_fleet_unity_1:0 "Unifying Might"
+ federation_fleet_unity_1:0 "รวมพลัง"
  federation_fleet_unity_1_desc:0 "To know that our joined fleets are patrolling the void bestows our members with a sense of pride, security and resolve."
- federation_fleet_unity_1_effect:1 "£unity£ §YMonthly Unity§! equal to §Y10%§! of the size of the Federation Fleet."
+ federation_fleet_unity_1_effect:1 "£unity£ §Yเอกภาพรายเดือน§! เท่ากับ §Y10%§! ของขนาดกองยานสหพันธ์"
  president_keep_navy_1:0 "Levy Exemption"
  president_keep_navy_1_desc:0 "Leading by example can be a powerful and inspiring thing, and thus the leader is free of any restrictions that would prevent this."
  president_keep_navy_1_effect:1 "Federation president contributes to federation fleet capacity without deducting their own naval capacity."
@@ -1319,25 +1324,25 @@
  galactic_focus_crisis_nanites_desc:0 "The Gray Tempest are a true crisis and a threat to the entire galaxy. We must unite and defeat the menace."
  galactic_focus_crisis_war_in_heaven:2 "แก้ปัญหาเรื่องสงครามของเหล่ามหาเทพ (จักรวรรดิฟอลเล็น)"
  galactic_focus_crisis_war_in_heaven_desc:0 "When giants go to war, the universe trembles. Survive the War in Heaven."
- resolution_category_politics_tradition:0 "Politics Traditions"
+ resolution_category_politics_tradition:0 "วัฒนธรรมการเมือง"
  resolution_category_politics_tradition_1:0 "$resolution_community_champions$"
  resolution_category_politics_tradition_2:0 "$resolution_constitutional_immunity$"
  resolution_category_politics_tradition_3:0 "$resolution_development_aides$"
  resolution_category_politics_tradition_4:0 "$resolution_galactic_threats_committee$"
- resolution_community_champions:0 "Champions of the Community"
+ resolution_community_champions:0 "แชมเปี้ยนของประชาคม"
  resolution_community_champions_desc:0 "Those we have trusted with guiding the Community are also the best candidates to become its most stalwart defenders. By granting them more powers and resources, we are enabling them to protect us all."
  resolution_community_champions_tooltip:0 "Council Members gain §G+10%§! Naval Capacity.\nThe Galactic Custodian gains §G20%§! Naval Capacity.\nThe Galactic Emperor gains §G25%§! Naval Capacity.\nOther members of the community lose §R5%§! Naval Capacity."
- resolution_constitutional_immunity:0 "Constitutional Immunity"
+ resolution_constitutional_immunity:0 "เอกสิทธิ์คุ้มครองทางกฎหมาย"
  resolution_constitutional_immunity_desc:0 "Sometimes, you need to get dirty in the name of the greater good. We honor the moral sacrifices made by those who allow us to live comfortable lives, sheltered from moral dilemmas."
  resolution_constitutional_immunity_tooltip:0 "The targeted empire can never be in breach of Galactic Law."
  immunity_already_active:0 "$TRIGGER_FAIL$Another empire already has Constitutional Immunity."
- resolution_development_aides:0 "Development Aides"
+ resolution_development_aides:0 "ผู้ช่วยพัฒนา"
  resolution_development_aides_desc:0 "The most privileged among us have a moral duty to help the others. They will shoulder our burdens to guide us all towards a more harmonious community."
  resolution_development_aides_tooltip:0 "Council Members gain §G+20%§! £diplo_weight£ Diplomatic Weight but lose §R15%§! of their income in £energy£ Energy, £minerals£ Minerals and £food£ Food. Other members of the community lose §R20%§! £diplo_weight£ Diplomatic Weight but gain §G5%§! more income in £energy£ Energy, £minerals£ Minerals and £food£ Food."
  unstable_economy:0 "This empire is currently experiencing a deficit."
  development_aides_counselor:0 "$resolution_development_aides$"
  development_aides_regular:0 "$resolution_development_aides$"
- resolution_galactic_threats_committee:0 "Galactic Threats Committee"
+ resolution_galactic_threats_committee:0 "คณะกรรมาธิการจัดการภัยคุกคามกาแล็กติก"
  resolution_galactic_threats_committee_desc:0 "Who knows what threats lurk just out of sensor range? Creating a committee dedicated to the study of galactic level threats will prepare us for anything."
  resolution_galactic_threats_committee_modifier_desc:0 "Damage to Endgame Crisis factions: §G+20%§!\n§R+10%§! Researchers upkeep.\n§RDangerous experiments might have dangerous results.§!"
  resolution_community_champions_repeal:1 "Repeal $resolution_community_champions$"
@@ -1469,7 +1474,7 @@
  RESOLUTION_DETAILS:0 "§Gคลิกเพื่อแสดงรายละเอียดมติ§!"
  IN_RECESS_HELP:0 "\n§Hวุฒิสภาอยู่ในช่วงปิดสมัยประชุม§!\nลงการสนับสนุนของคุณกับมติที่ถูกเสนอในคิวเพื่อกำหนด  ว่าญัตติใดจะถูกนำเข้าที่ประชุมเมื่อเซสชันถัดไปเริ่มต้นขึ้น"
  ENVOYS_HEADER:0 "§Hทูต§!"
- ENVOYS_STATUS:0 "ทูต $ASSIGNED|Y$ จากทั้งหมด $TOTAL|Y$ ได้รับมอบหมายงาน\n\nEnvoys can handle first contact with unknown aliens, be sent to other empires for diplomatic tasks, and manage spy networks.\n\nCertain §YCivics§!, §YBuildings§!, §YFederation Perks§!, §YLeader Traits§!, and building an §YInterstellar Assembly§! can give you additional Envoys."
+ ENVOYS_STATUS:0 "ทูต $ASSIGNED|Y$ จากทั้งหมด $TOTAL|Y$ ได้รับมอบหมายงาน\n\nทูตสามารถจัดการกับการติดต่อครั้งแรกกับเอเลี่ยนที่ไม่รู้จัก ส่งไปยังจักรวรรดิอื่นเพื่อทำหน้าที่ทางการฑูตและจัดการเครือข่ายสายลับ\n\n§Yพลเมือง§!, §Yสิ่งปลูกสร้าง§!, §Yความสามารถของสหพันธ์§!, §Yคุณลักษณะของผู้นำ§!, และการสร้าง §Yสมัชชาระหว่างดวงดาว§! สามารถเพิ่มทูตของคุณได้"
  ENVOYS_DESC: "Envoys have assignments\n\nEnvoys can handle first contact with unknown aliens, be sent to other empires for diplomatic tasks, and manage spy networks.\n\nCertain §YCivics§!, §YBuildings§!, §YFederation Perks§!, §YLeader Traits§!, and building an §YInterstellar Assembly§! can give you additional Envoys."
  ASSIGN_ENVOY:0 "แต่งตั้งทูต"
  ASSIGN_ENVOY_NOT_MEMBER_TOOLTIP:0 "§Hแต่งตั้งทูต§!\n§Rคุณจะต้องเป็นสมาชิกประชาคมกาแล็กติกจึงจะสามารถแต่งตั้งทูตได้§!"
