--- a/mod/thmod/localisation/english/leaders_l_english.yml
+++ b/mod/thmod/localisation/english/leaders_l_english.yml
@@ -52,11 +52,11 @@
  subclass_commander_councilor_hive_desc:0 "$subclass_commander_councilor_desc$"
  subclass_commander_councilor_machine:0 "$subclass_commander_councilor$"
  subclass_commander_councilor_machine_desc:0 "$subclass_commander_councilor_desc$"
- subclass_official_delegate: "ตัวแทน/ผู้รับมอบสิทธิ์"
+ subclass_official_delegate: "ตัวแทน"
  subclass_official_delegate_desc: "As the public face of our empire, Delegates represent our interests in Federations and in the Galactic Community."
- subclass_official_delegate_hive: "ตัวแทน/ผู้รับมอบสิทธิ์"
+ subclass_official_delegate_hive: "ตัวแทน"
  subclass_official_delegate_hive_desc: "$subclass_official_delegate_desc$"
- subclass_official_delegate_machine: "ตัวแทน/ผู้รับมอบสิทธิ์"
+ subclass_official_delegate_machine: "ตัวแทน"
  subclass_official_delegate_machine_desc: "$subclass_official_delegate_desc$"
  subclass_official_diplomacy_councilor: "เอกอัครราชทูต"
  subclass_official_diplomacy_councilor_desc: "Ambassadors maintain our relationships with other empires, both overtly and in more subtle ways. The art of diplomacy and the subtle craft of espionage both fall under their domain."
@@ -101,11 +101,11 @@
  subclass_scientist_councilor_machine: "นักสถิติ"
  subclass_scientist_councilor_machine_desc: "Statisticians are the main driving force behind the management of research teams and projects. These units pursue knowledge relentlessly."
  leader_trait_ignore_leader_cap_tt: "$t$Does not count towards Leader Capacity"
- leader_trait_scout:0 "Scout"
+ leader_trait_scout:0 "สอดแนม"
  leader_trait_scout_desc:2 "This leader is an expert at reconnaissance, having the technical skill to slip past even the most dangerous entities."
- leader_trait_scout_hive:0 "Scout"
+ leader_trait_scout_hive:0 "สอดแนม"
  leader_trait_scout_hive_desc:1 "This drone is specialized for reconnaissance, ensuring we get the most out of long-range starship sensors."
- leader_trait_scout_machine:0 "Scout"
+ leader_trait_scout_machine:0 "สอดแนม"
  leader_trait_scout_machine_desc:1 "This unit is specialized for reconnaissance, ensuring we get the most out of long-range starship sensors."
  leader_trait_restore_point:1 "Escape Pod"
  leader_trait_restore_point_desc:1 "This overtly cautious leader modified [Root.GetHisHer] vessel to command the ship from an escape pod, allowing [Root.GetHimHer] to abandon ship at the first sign of danger."
@@ -129,8 +129,8 @@
  leader_trait_destructive_desc:1 "Many would be happy to se this leader go. Their mere presence hurts our cohesion."
  leader_trait_collective_wisdom:1 "Detail-Oriented"
  leader_trait_collective_wisdom_desc:2 "A meticulous academic who works slowly, but produces incredible amounts of research."
- leader_trait_collective_wisdom_effect:1 "$TABBED_NEW_LINE$Grants $mod_leader_scientists_society_research_produces_add$ while Excavating Archaeology Sites"
- leader_trait_collective_wisdom_ancrel_effect: "$TABBED_NEW_LINE$Grants $mod_leader_scientists_society_research_produces_add$ and £minor_artifacts£ $MINOR_ARTIFACTS$ while Excavating Archaeology Sites"
+ leader_trait_collective_wisdom_effect:2 "$TABBED_NEW_LINE$Grants §G+$@trait_collective_wisdom_soc_amt|0$§! $mod_leader_scientists_society_research_produces_add$ while Excavating Archaeology Sites"
+ leader_trait_collective_wisdom_ancrel_effect:1 "$TABBED_NEW_LINE$Grants §G+$@trait_collective_wisdom_soc_amt|0$§! $mod_leader_scientists_society_research_produces_add$ and §G+$@trait_collective_wisdom_ma_amt|0$§! £minor_artifacts£ $MINOR_ARTIFACTS$ while Excavating Archaeology Sites"
  leader_trait_collective_wisdom_2:0 "$leader_trait_collective_wisdom$ II"
  leader_trait_collective_wisdom_2_desc:0 "$leader_trait_collective_wisdom_desc$"
  leader_trait_collective_wisdom_2_effect:1 "+20 £society£ §Y$society_research$§! while excavating a site."
@@ -144,41 +144,41 @@
  leader_trait_observant_2_hive_desc:0 "$leader_trait_observant_hive_desc$"
  leader_trait_observant_2_machine:0 "$leader_trait_observant_machine$ II"
  leader_trait_observant_2_machine_desc:0 "$leader_trait_observant_machine_desc$"
- leader_trait_resolution_category_commerce_focus: "Focus: Galactic Commerce"
+ leader_trait_resolution_category_commerce_focus: "โฟกัส: กาแล็กติกคอมเมิร์ซ"
  leader_trait_resolution_category_commerce_focus_desc: "This delegate takes a special interest in all matters related to Galactic Commerce."
- leader_trait_resolution_category_industry_focus: "Focus: Industrial Development"
+ leader_trait_resolution_category_industry_focus: "โฟกัส: การพัฒนาอุตสาหกรรม"
  leader_trait_resolution_category_industry_focus_desc: "This delegate takes a special interest in all matters related to Industrial Development."
- leader_trait_resolution_category_politics_traditions_focus: "Focus: Politics Traditions"
+ leader_trait_resolution_category_politics_traditions_focus: "โฟกัส: วัฒนธรรมการเมือง"
  leader_trait_resolution_category_politics_traditions_focus_desc: "This delegate takes a special interest in all matters related to Politics Traditions."
- leader_trait_resolution_category_politics_traditions_focus_tt: "$GALCOM_EFFECTS_TXT$$TABBED_NEW_LINE$Voting Strength on §YPolitics Traditions§! Resolutions:"
+ leader_trait_resolution_category_politics_traditions_focus_tt: "$GALCOM_EFFECTS_TXT$$TABBED_NEW_LINE$ความเข้มแข็งในการลงมติในญัตติ §Yวัฒนธรรมการเมือง§!:"
  leader_trait_resolution_category_politics_traditions_focus_1_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+5%§!"
  leader_trait_resolution_category_politics_traditions_focus_2_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+15%§!"
  leader_trait_resolution_category_politics_traditions_focus_3_tt: "$leader_trait_resolution_category_politics_traditions_focus_tt$ §G+25%§!"
- leader_trait_resolution_category_greatergood_focus: "Focus: The Greater Good"
+ leader_trait_resolution_category_greatergood_focus: "โฟกัส: สิ่งที่ดีกว่า"
  leader_trait_resolution_category_greatergood_focus_desc: "This delegate takes a special interest in all matters related to The Greater Good."
- leader_trait_resolution_category_galacticreforms_focus: "Focus: Galactic Reforms"
+ leader_trait_resolution_category_galacticreforms_focus: "โฟกัส: การปฏิรูปกาแล็กติก"
  leader_trait_resolution_category_galacticreforms_focus_desc: "This delegate takes a special interest in all matters related to Galactic Reforms."
- leader_trait_resolution_category_ecology_focus: "Focus: Ecological Protection"
+ leader_trait_resolution_category_ecology_focus: "โฟกัส: การปกป้องระบบนิเวศ"
  leader_trait_resolution_category_ecology_focus_desc: "This delegate takes a special interest in all matters related to Ecological Protection."
- leader_trait_resolution_category_galacticstudies_focus: "Focus: Unchained Knowledge"
+ leader_trait_resolution_category_galacticstudies_focus: "โฟกัส: ความรู้ที่ไม่ถูกล่ามโซ่"
  leader_trait_resolution_category_galacticstudies_focus_desc: "This delegate takes a special interest in all matters related to Unchained Knowledge."
- leader_trait_resolution_category_divinity_focus: "Focus: Divinity of Life"
+ leader_trait_resolution_category_divinity_focus: "โฟกัส: ความศักดิ์สิทธิ์แห่งชีวิต"
  leader_trait_resolution_category_divinity_focus_desc: "This delegate takes a special interest in all matters related to Divinity of Life."
- leader_trait_resolution_category_mutualdefense_focus: "Focus: Mutual Defense"
+ leader_trait_resolution_category_mutualdefense_focus: "โฟกัส: การป้องกันซึ่งกันและกัน"
  leader_trait_resolution_category_mutualdefense_focus_desc: "This delegate takes a special interest in all matters related to Mutual Defense."
- leader_trait_resolution_category_rulesofwar_focus: "Focus: Rules of War"
+ leader_trait_resolution_category_rulesofwar_focus: "โฟกัส: กฎแห่งสงคราม"
  leader_trait_resolution_category_rulesofwar_focus_desc: "This delegate takes a special interest in all matters related to Rules of War."
- leader_trait_resolution_category_defenseprivatization_focus: "Focus: Defense Privatization"
+ leader_trait_resolution_category_defenseprivatization_focus: "โฟกัส: การแปรรูปกลาโหม"
  leader_trait_resolution_category_defenseprivatization_focus_desc: "This delegate takes a special interest in all matters related to Defense Privatization."
- leader_trait_resolution_category_intergalacticdirective_focus: "Focus: Intergalactic Directives"
+ leader_trait_resolution_category_intergalacticdirective_focus: "โฟกัส: คำสั่งอินเตอร์กาแล็กติก"
  leader_trait_resolution_category_intergalacticdirective_focus_desc: "This delegate takes a special interest in all matters related to Intergalactic Directives."
- leader_trait_resolution_category_bureaucraticsurveillance_focus: "Focus: Bureaucratic Surveillance"
+ leader_trait_resolution_category_bureaucraticsurveillance_focus: "โฟกัส: การตรวจตราดูแลระบบราชการ"
  leader_trait_resolution_category_bureaucraticsurveillance_focus_desc: "This delegate takes a special interest in all matters related to Bureaucratic Surveillance."
- leader_trait_resolution_category_pre_ftl_stances_focus: "Focus: Pre-FTL Stance"
+ leader_trait_resolution_category_pre_ftl_stances_focus: "โฟกัส: ท่าทีต่ออารยธรรมดึกดำบรรพ์ Pre-FTL"
  leader_trait_resolution_category_pre_ftl_stances_focus_desc: "This delegate takes a special interest in all matters related to Pre-FTL Stance."
- leader_trait_resolution_category_sanctions_focus: "Focus: Sanctions"
+ leader_trait_resolution_category_sanctions_focus: "โฟกัส: บทลงโทษ"
  leader_trait_resolution_category_sanctions_focus_desc: "This delegate takes a special interest in all matters related to Galactic Sanctions."
- leader_trait_resolution_category_sanctions_focus_tt: "$GALCOM_EFFECTS_TXT$$TABBED_NEW_LINE$Voting Strength on §YGalactic Sanctions§! Resolutions:"
+ leader_trait_resolution_category_sanctions_focus_tt: "$GALCOM_EFFECTS_TXT$$TABBED_NEW_LINE$ความเข้มแข็งในการลงมติในญัตติ §Yบทลงโทษของกาแล็กติก§!:"
  leader_trait_resolution_category_sanctions_focus_1_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+5%§!"
  leader_trait_resolution_category_sanctions_focus_2_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+15%§!"
  leader_trait_resolution_category_sanctions_focus_3_tt: "$leader_trait_resolution_category_sanctions_focus_tt$ §G+25%§!"
