--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -121,7 +121,7 @@
  leviathans.126.desc:0 "Excellent! We are happy to share our skills with the [Root.GetName]."
  leviathans.126.desc.alt: "Excellent! May we both profit from each other's... distinct approach to commerce."
  already_hired_trader_official:2 "§RWe have already recruited a leader from the [enclave_country.GetName]§!."
- recruit_trader_leader:1 "เพิ่ม §Yผู้ว่าการ§! [enclave_country.GetAdj] ที่มี §Yคุณลักษณะเทรดเดอร์ผู้ประสานงาน§! ในกลุ่ม §Hผู้นำ§!"
+ recruit_trader_leader:1 "เพิ่ม [enclave_country.GetAdj] §Yเจ้าหน้าที่§! ที่มี §Yคุณลักษณะเทรดเดอร์ผู้ประสานงาน§! ในกลุ่ม §Hผู้นำ§!"
  requires_trader_enclave:0 "§RRequires a §YTrader Enclave§! in the system.§!"
  sm_trader_proxy_office:0 "Trader Proxy Office"
  sm_trader_proxy_office_desc:0 "The §YTrader Enclaves§! enjoy special privileges on the Galactic Market, which can also benefit us."
@@ -146,7 +146,7 @@
  councilor_enclave_trader_desc: "A liaison from one of the three hubs of galactic commerce sits on the council, granting insider information on brokerages across the galaxy."
  councilor_enclave_trader_unlock_title: "§HCouncil Position from the $NAME_Muutagan_Merchant_Guild$, $NAME_Riggan_Commerce_Exchange$, or $NAME_XuraCorp$§!"
  councilor_enclave_trader_conditional_tooltip: "ผู้นำมีคุณลักษณะ §Yเทรดเดอร์ผู้ประสานงาน§!"
- unlocks_trader_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_enclave_trader$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_TRADE_VALUE_MULT$: §G+2%§!\n$ttt$$MOD_COUNTRY_TRADE_FEE$ §G-1%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$governor_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_enclave_trader_conditional_tooltip$"
+ unlocks_trader_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_enclave_trader$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_TRADE_VALUE_MULT$: §G+2%§!\n$ttt$$MOD_COUNTRY_TRADE_FEE$ §G-1%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$official_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_enclave_trader_conditional_tooltip$"
  leviathans.131.desc:3 "The §YVolatile Mote§! is a prized Riggan condiment. It is renowned throughout the galaxy for its distinct flavor, which is unlike any other - and its explosiveness, which is also unlike any other. We sell it only to our most valued trading partners, among which we count the [Root.GetName].\n\nIf you can meet our modest price, we are willing to export Volatile Motes to you for a period of ten standard years."
  leviathans.131.a.reply:1 "You will not be sorry. Unless you consume too much spice, of course... Then there is a small chance that you will spontaneously combust. A very small chance, to be sure."
  leviathans.130.desc:4 "This is a product that we here at XuraCorp are particularly proud of. Our Medical Division has recently begun refining a gas with unique properties that will significantly ease the often difficult process of adapting to a foreign planetary environment. It is however unlikely to be compatible with alien physiology!\n\nWe are willing to export our §YExotic Gas§! to you for a period of ten standard years, after which the contract will have to be renegotiated."
@@ -326,7 +326,7 @@
  leviathans.500.b:1 "คุณสามารถช่วยใน§Yการวิจัย§!ของเราได้หรือไม่?"
  leviathans.500.b.alreadyaided:0 "The Curators are already improving our research capabilities."
  leviathans.500.c:1 "บอกเราเกี่ยวกับ§Yความลึกลับ§!ของจักรวาล"
- leviathans.500.d:1 "เราสามารถรับจ้าง§Yนักวิทยาศาสตร์§!ของคุณได้ไหม?"
+ leviathans.500.d:1 "เราสามารถจ้าง§Yนักวิทยาศาสตร์§!ของคุณได้ไหม?"
  leviathans.500.d.alreadyrecruited:0 "We already employ a Curator scientist."
  leviathans.500.d.opinion:0 "ต้องการ §Yผู้ดูแลพิพิธภัณฑ์§! ให้มี:\n£opinion£ ทัศนคติ +50"
  leviathans.500.e:0 "Can you share the fundamental principles of knowledge?"
@@ -359,7 +359,7 @@
  leviathans.508.k:1 "บอกเราเกี่ยวกับ §Y$NAME_Scavenger_Bot$§!"
  leviathans.508.l:1 "บอกเราเกี่ยวกับ §Y$NAME_Elderly_Tiyanki$§!"
  leviathans.508.m:0 "บอกเราเกี่ยวกับ §Y$NAME_Toxic_God$§!"
- leviathans.506.f:0 "How would our current fleet fare against it in battle?"
+ leviathans.506.f:0 "กองยานปัจจุบันของเราจะต่อสู้กับมันอย่างไร?"
  leviathans.5106.f1.reply:0 "Poorly. Very poorly.\n\nWait a second, you're not actually thinking of...? My goodness, with the ships you have? It... it would be a slaughter!"
  leviathans.5106.f2.reply:0 "I would strongly advise against it. Your attacks would likely be more of an annoyance than a threat."
  leviathans.5106.f3.reply:1 "Hmmm, yes... Yes, I suppose you might actually stand a chance. If you combined your entire fleet... It would not be an easy victory, mind you, but one that is at least within the realm of possibility."
@@ -367,7 +367,7 @@
  leviathans.500.f:1 "เราต้องการสร้าง §YThink Tank§! ร่วมกัน"
  leviathans.511.name:0 "Think Tank"
  leviathans.511.desc:1 "Yes... yes, such a facility would benefit the advancement of Galactic Science. You may build this Think Tank at your starbase in the system you share with us. Our Curators will come to mingle with your scientists."
- leviathans.511.a:0 "Excellent. What else do you have to offer?"
+ leviathans.511.a:0 "ยอดเยี่ยม คุณมีอะไรจะนำเสนออีกหรือไม่?"
  leviathans.511.a.tooltip:0 "We can now build the §HCurator Think Tank§! Starbase Building in the §Y[curator_system.GetName]§! system."
  leviathans.550.name:0 "Voidspawn"
  leviathans.550.desc:1 "If our suspicions hold true, the Voidspawn is far away from home. We believe it is the progeny of an extragalactic predator of unthinkable proportions: one that stalks the void of space in search of its prey. Though we have never before encountered a live specimen, we have heard tales of the destruction and chaos grown Voidspawn leave in their wake. It is said that worlds fester under their shadow."
@@ -406,7 +406,7 @@
  leviathans.558.B.reply:0 "There have been few survivors to its past encounters. According to reports, its corrosive poisons are able to burn through all forms of armor. Shields are only slightly more useful. Furthermore, the creatures living on its back will supposedly act as an attack swarm when it is threatened. We can only suggest you approach it with overwhelming force."
  leviathans.590.name:0 "Hire Scientist"
  leviathans.590.desc:0 "We are willing to pledge the services of one of our most brilliant scientists to your cause. This is not an offer we make to just anyone, you understand!\n\nA suitable... donation will of course be necessary, before traveling arrangements can be made."
- leviathans.590.a:0 "Of course. You shall have your donation."
+ leviathans.590.a:0 "แน่นอน คุณจะได้รับการบริจาค"
  leviathans.590.a.reply:0 "Excellent. You will now have unfettered access to one of the greatest minds of our time!"
  leviathans.590.tt_scientist:0 "We may only employ §Yone§! §HCurator scientist§! at a time."
  leviathans.598.name:0 "Shared Principles"
@@ -431,9 +431,9 @@
  leviathans.597d.desc:0 "You have been declared an enemy of the entire Curator Order."
  leviathans.510.name:0 "Ether Drake"
  leviathans.510.desc:0 "The Ether Drake species is ill-suited to life in our universe. The last dragon is strong, but not invincible."
- leviathans.510.a:0 "What is it, really?"
+ leviathans.510.a:0 "จริงๆแล้วมันคืออะไร?"
  leviathans.510.a.reply:0 "By all accounts, the Ether Drakes predate all galactic civilization. There once were multitudes, but their race has been wasting away for eons.\n\nThey are ill-suited to life, here and now. Something about the physical laws of the universe does not agree with them, like they evolved in another reality. They did, in fact. We believe that they are but the last dregs of a universe that ended before ours began, the sole survivors of some "big crunch."\n\nThe dragon not far from here is the last of its kind in the galaxy, perhaps the universe."
- leviathans.510.b:0 "Tell us how to defeat it."
+ leviathans.510.b:0 "จะเอาชนะมันได้อย่างไร"
  leviathans.510.b.reply:0 "Its scales respond to percussive rhythms. To be more precise, certain frequencies have a relaxing effect on the sub-dermal musculature controlling the positioning and shock absorption of their scale plates. A reflex that once played a key role in Ether Drake social interactions, it is now a clear and obvious weakness.\n\nAdjusting the firing pattern of your vessels according to a particular rhythm will greatly increase the damage you can inflict on the last dragon. It was never meant for our age - put it out of its misery."
  leviathans.515.name:0 "Enigmatic Fortress"
  leviathans.515.desc:0 "It is the kind of absurd, massive and self-perpetuating construction that you don't see built anymore. Maybe that is for the best."
@@ -870,8 +870,8 @@
  muutagan_crystals_effect:2 "\n§YMuutagan Crystals§! grant Happiness §G+10%§!"
  space_dragon_baby:0 "Immature Ether Drake"
  space_dragon_baby_plural:0 "Immature Ether Drakes"
- enclave_station:0 "Enclave Station"
- enclave_station_plural:0 "Enclave Stations"
+ enclave_station:0 "สถานี Enclave"
+ enclave_station_plural:0 "สถานี Enclave"
  space_dragon_red:0 "Ether Drake"
  space_dragon_red_plural:0 "Ether Drakes"
  stellarite:1 "Stellar Devourer"
@@ -913,12 +913,12 @@
  mod_planet_structures_rare_crystals_cost_mult:0 "District and Building Rare Crystals Cost"
  mod_planet_structures_volatile_motes_cost_mult:0 "District and Building Volatile Motes Cost"
  mod_planet_structures_exotic_gases_cost_mult:0 "District and Building Exotic Gases Cost"
- curator_archivist_explanation: "\nWe will hire a Level 5 Scientist with the §Y$leader_trait_curator$§! Trait."
- councilor_curator_archivist: "Curator Archivist"
+ curator_archivist_explanation: "\nเราจะจ้างนักวิทยาศาสตร์ เลเวล 5 พร้อมกับคุณลักษณะ §Y$leader_trait_curator$§!"
+ councilor_curator_archivist: "ผู้เก็บเอกสารสำคัญ"
  councilor_curator_archivist_female: "$councilor_curator_archivist$"
  councilor_curator_archivist_desc: "An archivist from the $NAME_Curator_Order$ serves on the council, sharing the accumulated knowledge of eons."
  councilor_curator_archivist_unlock_title: "§HCouncil Position from the $NAME_Curator_Order$§!"
- councilor_curator_archivist_conditional_tooltip: "Leader has the §Y$leader_trait_curator$§! Trait."
+ councilor_curator_archivist_conditional_tooltip: "ผู้นำมีคุณลักษณะ §Y$leader_trait_curator$§!"
  unlocks_curator_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_curator_archivist$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_ASSIST_RESEARCH_MULT$: §G+5%§!\n$ttt$$mod_planet_researchers_upkeep_mult$ §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_curator_archivist_conditional_tooltip$"
  curator_archivist_desc: "$leader_trait_curator_desc$"
  curator_archivist_catch_phrase: "§L"Together we shall uncover secrets long forgotten."§!"
