--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -727,7 +727,7 @@
  job_warrior_drone:0 "โดรนนักรบ"
  job_warrior_drone_plural:0 "โดรนนักรบ"
  job_warrior_drone_desc:1 "Military experts who specialize in the training of new army drones and naval crew."
- job_warrior_drone_effect_desc:0 "£job_warrior_drone£ $job_warrior_drone_plural$ เพิ่ม £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! และวางกำลัง £defense_army£ §Yกองทัพป้องกัน§!"
+ job_warrior_drone_effect_desc:1 "£job_warrior_drone£ $job_warrior_drone_plural$ เพิ่ม £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, £stability£ §Y$MOD_PLANET_STABILITY_ADD$§! และวางกำลัง £defense_army£ §Yกองทัพป้องกัน§!"
  mod_job_warrior_drone_add:0 "งาน $job_warrior_drone$"
  mod_job_warrior_drone_per_pop:0 "§G+1§! อาชีพ $job_warrior_drone$ ต่อ $VALUE$ ประชากร"
  mod_job_warrior_drone_per_pop_short:0 "\n§G+1§! £mod_job_warrior_drone_add£ ต่อ $VALUE$ £pop£"
@@ -1005,7 +1005,7 @@
  job_soldier:0 "ทหาร"
  job_soldier_plural:0 "ทหาร"
  job_soldier_desc:1 "Military professionals are needed to train a steady stream of new recruits for army and naval operations."
- job_soldier_effect_desc:0 "£job_soldier£ $job_soldier_plural$ เพิ่ม £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! และวางกำลัง £defense_army£ §Yกองทัพป้องกัน§!"
+ job_soldier_effect_desc:1 "£job_soldier£ $job_soldier_plural$ เพิ่ม £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!, £stability£ §Y$MOD_PLANET_STABILITY_ADD$§! และวางกำลัง £defense_army£ §Yกองทัพป้องกัน§!"
  mod_job_soldier_add:0 "งาน $job_soldier$"
  mod_job_soldier_per_pop:0 "§G+1§! อาชีพ $job_soldier$ ต่อ $VALUE$ ประชากร"
  mod_job_soldier_per_pop_short:0 "\n§G+1§! £mod_job_soldier_add£ ต่อ $VALUE$ £pop£"
@@ -1693,12 +1693,12 @@
  mod_planet_researchers_society_research_produces_add:0 "$mod_planet_researchers_society_research_produces_mult$"
  mod_planet_researchers_consumer_goods_upkeep_add:0 "£consumer_goods£ $consumer_goods$ ที่เป็นค่าบำรุงรักษาของ £job_researcher£ [GetResearcherPlural]"
  mod_planet_researchers_unity_produces_add:0 "£unity£ $unity$ จาก £job_researcher£ [GetResearcherPlural]"
- mod_planet_researchers_produces_mult:2 "[GetResearcherPluralWithIcon] Output"
+ mod_planet_researchers_produces_mult:2 "ผลผลิต [GetResearcherPluralWithIcon]"
  mod_planet_rangers_food_produces_add: "£food£ $food$ จาก £job_ranger£ $job_ranger_plural$"
  mod_planet_rangers_minerals_produces_add: "£minerals£ $minerals$ from £job_ranger£ $job_ranger_plural$"
  mod_planet_rangers_energy_produces_add: "£energy£ $energy$ from £job_ranger£ $job_ranger_plural$"
  mod_planet_rangers_society_research_produces_add: "£society£ $society_research$ from £job_ranger£ $job_ranger_plural$"
- mod_planet_culture_workers_produces_mult:1 "[GetCultureWorkerPluralWithIcon] Output"
+ mod_planet_culture_workers_produces_mult:1 "ผลผลิต [GetCultureWorkerPluralWithIcon]"
  mod_planet_synapse_drones_unity_produces_mult:0 "£unity£ ผลผลิตที่เป็นเอกภาพของ $job_synapse_drone_plural$"
  mod_planet_evaluators_produces_mult:0 "£job_evaluator£ ผลิตผล $job_evaluator_plural$"
  mod_planet_evaluators_unity_produces_mult:0 "£unity£ ผลผลิตเอกภาพของ $job_evaluator_plural$"
@@ -3616,10 +3616,10 @@
  colony.3033.desc.robot:0 "Status update: [Root.Owner.Capital.GetName] offline. [Root.Owner.GetName] combat capacity: 23% of optimal. Remaining Colony network: [Root.GetName]. Expected results: Total Warp beast victory within 2 solar cycles.  Error! Warp beast activity detected in [Root.GetName] orbit! Error!\n\n**§YThe signal abruptly ends§!**"
  colony.3033.a.robot:0 "Report."
  colony.3033.d.robot:0 "Mirror Universe [Root.Owner.Species.GetName] offline."
- dportal_trade_increases_tooltip:0 "The £amenities£ and £trade_value£ output of §Y$job_dimensional_portal_researcher_plural$§! increases."
- dportal_trade_increases_gestalt_tooltip:0 "The £amenities£ and £energy£ output of §Y$job_dimensional_portal_researcher_gestalt_plural$§! increases."
- dportal_trade_reduces_tooltip:0 "The £amenities£ and £trade_value£ output of §Y$job_dimensional_portal_researcher_plural$§! decreases."
- dportal_trade_reduces_gestalt_tooltip:0 "The £amenities£ and £energy£ output of §Y$job_dimensional_portal_researcher_gestalt_plural$§! decreases."
+ dportal_trade_increases_tooltip:0 "£amenities£ และ £trade_value£ ผลผลิตของ §Y$job_dimensional_portal_researcher_plural$§! เพิ่มขึ้น"
+ dportal_trade_increases_gestalt_tooltip:0 "£amenities£ และ £energy£ ผลผลิตของ §Y$job_dimensional_portal_researcher_gestalt_plural$§! เพิ่มขึ้น"
+ dportal_trade_reduces_tooltip:0 "£amenities£ และ £trade_value£ ผลผลิตของ §Y$job_dimensional_portal_researcher_plural$§! ลดลง"
+ dportal_trade_reduces_gestalt_tooltip:0 "£amenities£ และ £energy£ ผลผลิตของ §Y$job_dimensional_portal_researcher_gestalt_plural$§! ลดลง"
  action.96.name:0 "§Hกำเนิดตลาดกาแล็กติก§!"
  action.96.desc:0 "De facto galactic trade, unbound by the performance of international diplomacy, has existed since we first discovered that we are not alone in the universe. As new borders are discovered and old ones redrawn across the galaxy, galactic leaders agree that it is time to §Ylegitimize this commercial forum§! so that all may benefit.\n\nIn the coming years, independent traders and government agencies will be looking to establish a quasi-centralized hub for galactic commerce. We would surely benefit were this hub to fall within [Root.GetAdj] space, so we can choose to §Ypromote one of our worlds§! for this purpose."
  action.96.desc.corp:1 "The customers, clients, and rubes of the galaxy at long last seem ready to accept a quasi-centralized platform for deregulated, mid-scale international commerce.\n\nWe can §Ypromote one of our worlds§! to play host to this commercial hub, to maximize potential revenue."
