--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -44,8 +44,8 @@
  RIVALRY_INVALID_DESC:0 "$COUNTRY|Y$ ไม่ใช่คู่แข่งของจักรวรรดิเราอีกต่อไป"
  MESSAGE_MADE_FIRST_CONTACT_WE:0 "We have encountered the §H$WHO$§! in the §H$STAR$§! system!"
  MESSAGE_MADE_FIRST_CONTACT_THEM:0 "Contact has been established with the §H$WHO$§! in the §H$STAR$§! system!"
- ACTION_DECLARE_WAR_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! war declaration vote has passed, and we are now §Yat war§! with the §H[Recipient.GetName]§!!"
- ACTION_DECLARE_WAR_VOTE_FAILED:0 "The vote for the declaration of war against §H[Recipient.GetName]§! failed."
+ ACTION_DECLARE_WAR_VOTE_PASSED:0 "§H[Actor.GetAllianceName]§! โหวตผ่านการประกาศสงครามแล้ว และตอนนี้เรา §Yกำลังทำสงคราม§! กับ §H[Recipient.GetName]§!!"
+ ACTION_DECLARE_WAR_VOTE_FAILED:0 "การโหวตเพื่อประกาศสงครามกับ §H[Recipient.GetName]§! ไม่สำเร็จ"
  ACTION_INVITE_TO_ALLIANCE_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to invite §H[Recipient.GetName]§! into the Alliance."
  ACTION_INVITE_TO_ALLIANCE_VOTE_FAILED:0 "The vote to invite §H[Recipient.GetName]§! into the §H[Actor.GetAllianceName]§! failed."
  ACTION_KICK_FROM_ALLIANCE_VOTE_PASSED:0 "The §H[Actor.GetAllianceName]§! voted to kick §H[Recipient.GetName]§! from the Alliance."
@@ -271,7 +271,7 @@
  MESSAGE_SUPPORTED_DECLARED_WAR:1 "บริวารประกาศสงคราม"
  MESSAGE_SUPPORTED_DECLARED_WAR_DESC:1 "$CALLER|Y$, for whom we support independence, has declared war on $DEFENDER|Y$!"
  MESSAGE_OFFENSIVE_PACT_DECLARED_WAR:0 "เข้าร่วมสงครามรุกราน"
- MESSAGE_OFFENSIVE_PACT_DECLARED_WAR_DESC:1 "$CALLER|Y$, who we agreed to support in their offensive war, has declared war on $DEFENDER|Y$!"
+ MESSAGE_OFFENSIVE_PACT_DECLARED_WAR_DESC:1 "$CALLER|Y$ ฝ่ายที่เราเห็นชอบที่จะสนับสนุน สงครามรุกรานของพวกเขา ได้ประกาศสงครามกับ $DEFENDER|Y$! แล้ว"
  MESSAGE_WAR_ENDED:0 "สงครามสิ้นสุดลง"
  MESSAGE_WAR_ENDED_DESC_1:2 "The war between $ATTACKER|Y$ and $DEFENDER|Y$ has ended due to $DEFENDER|Y$ being subjugated or annexed by a third party."
  MESSAGE_WAR_ENDED_DESC_2:3 "Our war with $ENEMY|Y$ has ended due to them being subjugated or annexed by $OVERLORD|Y$. We have not entered a truce."
