--- a/mod/thmod/localisation/english/modifiers_3_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_3_l_english.yml
@@ -35,7 +35,7 @@
  syndaw_production_surplus:0 "Production Quota Surpluses"
  mycelial_network_modifier:0 "Mycelial Network"
  mycelial_network_modifier_improved:0 "Improved Mycelial Network"
- fumongus_authoritarian:0 "Authoritarian Attraction"
+ fumongus_authoritarian:0 "แรงดึงดูดอำนาจนิยม"
  rage_sage_soldiers:0 "Sage Rage"
  harmonious_tune:0 "Harmonious Tune"
  harmonious_tune_desc:0 "Everything should serve the collective. This tune is used to stabilize the connection between our drones and the wider hive."
