--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -173,6 +173,7 @@
  mod_living_standard_trade_value_workers_add: "£trade_value£ มูลค่าการค้าจาก $WORKERS$"
  mod_living_standard_trade_value_slaves_add: "£trade_value£ มูลค่าการค้าจาก $SLAVES$"
  mod_living_standard_trade_value_criminals_add: "£trade_value£ มูลค่าการค้าจาก $CRIMINALS$"
+ mod_job_soldier_or_warrior_add: "[GetSoldierJobsAdd]"
  mod_job_soldier_stability_add:2 "เสถียรภาพจากงาน £job_soldier£ [GetSoldier]"
  mod_job_researcher_naval_cap_add: "£mod_country_naval_cap_add£ $MOD_COUNTRY_NAVAL_CAP_ADD$ from £job_researcher£ [GetResearcher] Jobs"
  MOD_COUNTRY_COLONY_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในอาณานิคม"
@@ -665,37 +666,37 @@
  mod_country_ethic_influence_produces_add:0 "$MOD_COUNTRY_INFLUENCE_GAIN_ADD$"
  mod_country_power_projection_influence_produces_add:1 "£influence£ $influence$ สูงสุดจาก $country_power_projection$"
  mod_country_power_projection_influence_produces_mult:1 "£influence£ $influence$ จาก $country_power_projection$"
- mod_resolution_category_divinity_vote_strength_mult:0 "Voting Strength on §Y$resolution_category_divinity$§! Resolutions"
- mod_resolution_category_commerce_vote_strength_mult: "Voting Strength on §Y$resolution_category_commerce$§! Resolutions"
- mod_resolution_category_industry_vote_strength_mult: "Voting Strength on §Y$resolution_category_industry$§! Resolutions"
- mod_resolution_category_market_vote_strength_mult: "Voting Strength on §Y$resolution_category_market$§! Resolutions"
- mod_resolution_category_sanctions_commerce_industry_vote_strength_mult: "Voting Strength on §Y$resolution_category_sanctions_commerce_industry$§! Resolutions"
- mod_resolution_category_politics_tradition_1_vote_strength_mult: "Voting Strength on §Y$resolution_category_politics_tradition_1$§! Resolutions"
- mod_resolution_category_politics_tradition_2_vote_strength_mult: "Voting Strength on §Y$resolution_category_politics_tradition_2$§! Resolutions"
- mod_resolution_category_politics_tradition_3_vote_strength_mult: "Voting Strength on §Y$resolution_category_politics_tradition_3$§! Resolutions"
- mod_resolution_category_politics_tradition_4_vote_strength_mult: "Voting Strength on §Y$resolution_category_politics_tradition_4$§! Resolutions"
- mod_resolution_category_greatergood_vote_strength_mult: "Voting Strength on §Y$resolution_category_greatergood$§! Resolutions"
- mod_resolution_category_galacticreforms_vote_strength_mult: "Voting Strength on §Y$resolution_category_galacticreforms$§! Resolutions"
- mod_resolution_category_sanctions_politics_culture_vote_strength_mult: "Voting Strength on §Y$resolution_category_sanctions_politics_culture$§! Resolutions"
- mod_resolution_category_ecology_vote_strength_mult: "Voting Strength on §Y$resolution_category_ecology$§! Resolutions"
- mod_resolution_category_galacticstudies_vote_strength_mult: "Voting Strength on §Y$resolution_category_galacticstudies$§! Resolutions"
- mod_resolution_category_sanctions_environment_technology_vote_strength_mult: "Voting Strength on §Y$resolution_category_sanctions_environment_technology$§! Resolutions"
- mod_resolution_category_mutualdefense_vote_strength_mult: "Voting Strength on §Y$resolution_category_mutualdefense$§! Resolutions"
- mod_resolution_category_rulesofwar_vote_strength_mult: "Voting Strength on §Y$resolution_category_rulesofwar$§! Resolutions"
- mod_resolution_category_declare_crisis_vote_strength_mult: "Voting Strength on §Y$resolution_category_declare_crisis$§! Resolutions"
- mod_resolution_category_sanctions_defense_war_vote_strength_mult: "Voting Strength on §Y$resolution_category_sanctions_defense_war$§! Resolutions"
- mod_resolution_category_galactic_focus_vote_strength_mult: "Voting Strength on §Y$resolution_category_galactic_focus$§! Resolutions"
- mod_resolution_category_imperial_council_vote_strength_mult: "Voting Strength on §Y$resolution_category_imperial_council$§! Resolutions"
- mod_resolution_category_foreign_relations_vote_strength_mult: "Voting Strength on §Y$resolution_category_foreign_relations$§! Resolutions"
- mod_resolution_category_imperial_reforms_vote_strength_mult: "Voting Strength on §Y$resolution_category_imperial_reforms$§! Resolutions"
- mod_resolution_category_emperor_imperial_institutions_vote_strength_mult: "Voting Strength on §Y$resolution_category_emperor_imperial_institutions$§! Resolutions"
- mod_resolution_category_term_limits_vote_strength_mult: "Voting Strength on §Y$resolution_category_term_limits_vote$§! Resolutions"
- mod_resolution_category_custodian_reforms_vote_strength_mult: "Voting Strength on §Y$resolution_category_custodian_reforms$§! Resolutions"
- mod_resolution_category_galactic_institutions_vote_strength_mult: "Voting Strength on §Y$resolution_category_galactic_institutions$§! Resolutions"
- mod_resolution_category_defenseprivatization_vote_strength_mult: "Voting Strength on §Y$resolution_category_defenseprivatization$§! Resolutions"
- mod_resolution_category_intergalacticdirective_vote_strength_mult: "Voting Strength on §Y$resolution_category_intergalacticdirective$§! Resolutions"
- mod_resolution_category_bureaucraticsurveillance_vote_strength_mult: "Voting Strength on §Y$resolution_category_bureaucraticsurveillance$§! Resolutions"
- mod_resolution_category_pre_ftl_stances_vote_strength_mult: "Voting Strength on §Y$resolution_category_pre_ftl_stances$§! Resolutions"
+ mod_resolution_category_divinity_vote_strength_mult:0 "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_divinity$§!"
+ mod_resolution_category_commerce_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_commerce$§!"
+ mod_resolution_category_industry_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_industry$§!"
+ mod_resolution_category_market_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_market$§!"
+ mod_resolution_category_sanctions_commerce_industry_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_sanctions_commerce_industry$§!"
+ mod_resolution_category_politics_tradition_1_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_politics_tradition_1$§!"
+ mod_resolution_category_politics_tradition_2_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_politics_tradition_2$§!"
+ mod_resolution_category_politics_tradition_3_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_politics_tradition_3$§!"
+ mod_resolution_category_politics_tradition_4_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_politics_tradition_4$§!"
+ mod_resolution_category_greatergood_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_greatergood$§!"
+ mod_resolution_category_galacticreforms_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_galacticreforms$§!"
+ mod_resolution_category_sanctions_politics_culture_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_sanctions_politics_culture$§!"
+ mod_resolution_category_ecology_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_ecology$§!"
+ mod_resolution_category_galacticstudies_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_galacticstudies$§!"
+ mod_resolution_category_sanctions_environment_technology_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_sanctions_environment_technology$§!"
+ mod_resolution_category_mutualdefense_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_mutualdefense$§!"
+ mod_resolution_category_rulesofwar_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_rulesofwar$§!"
+ mod_resolution_category_declare_crisis_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_declare_crisis$§!"
+ mod_resolution_category_sanctions_defense_war_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_sanctions_defense_war$§!"
+ mod_resolution_category_galactic_focus_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_galactic_focus$§!"
+ mod_resolution_category_imperial_council_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_imperial_council$§!"
+ mod_resolution_category_foreign_relations_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_foreign_relations$§!"
+ mod_resolution_category_imperial_reforms_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_imperial_reforms$§!"
+ mod_resolution_category_emperor_imperial_institutions_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_emperor_imperial_institutions$§!"
+ mod_resolution_category_term_limits_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_term_limits_vote$§!"
+ mod_resolution_category_custodian_reforms_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_custodian_reforms$§!"
+ mod_resolution_category_galactic_institutions_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_galactic_institutions$§!"
+ mod_resolution_category_defenseprivatization_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_defenseprivatization$§!"
+ mod_resolution_category_intergalacticdirective_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_intergalacticdirective$§!"
+ mod_resolution_category_bureaucraticsurveillance_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_bureaucraticsurveillance$§!"
+ mod_resolution_category_pre_ftl_stances_vote_strength_mult: "ความเข้มแข็งในการลงมติในญัตติ §Y$resolution_category_pre_ftl_stances$§!"
  mod_pop_ethic_pacifist_attraction_mult:0 "การดึงดูดจริยธรรมที่รักสันติ"
  mod_pop_ethic_militarist_attraction_mult:0 "การดึงดูดจริยธรรมที่ชอบสงคราม"
  mod_pop_ethic_materialist_attraction_mult:0 "การดึงดูดจริยธรรมวัตถุนิยม"
@@ -1163,7 +1164,7 @@
  opinion_rivalry:0 "คู่แข่งของเรา"
  opinion_declared_rival:0 "คู่แข่งเรา"
  opinion_mutual_threat:0 "Mutual Threats"
- opinion_mutual_rival:0 "Mutual Rivals"
+ opinion_mutual_rival:0 "มีคู่แข่งร่วมกัน"
  opinion_ally_of_ally:0 "พันธมิตรของพันธมิตร"
  opinion_allied_to_rival:0 "จากพันธมิตรเป็นคู่แข่ง"
  opinion_rivals_with_ally:0 "คู่แข่งและพันธมิตร"
