--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -918,9 +918,9 @@
  opinion_hostile_first_contact:0 "Hostile First Contact"
  opinion_hostile_first_contact_vivisection:0 "Vivisections"
  opinion_hostile_first_contact_hungry:0 "Plunging the Depths of Depravity"
- opinion_first_contact_delightful_aliens:0 "Delightful Aliens"
+ opinion_first_contact_delightful_aliens:0 "น่าปิติยินดี"
  opinion_first_contact_repulsive_aliens:0 "มนุษย์ต่างดาวที่น่ารังเกียจ"
- opinion_first_contact_speak_like_us:0 "Speak Like Us"
+ opinion_first_contact_speak_like_us:0 "พูดเหมือนเรา"
  opinion_first_contact_not_very_intelligent:0 "Not the Brightest"
  opinion_first_contact_very_insulting:1 "การเลือกคำพูดที่ไม่ดี"
  opinion_first_contact_quite_insulting:0 "$opinion_first_contact_very_insulting$"
@@ -973,7 +973,7 @@
  first_comms_hostility_preparations:0 "Preparations for Hostile Action"
  first_comms_defensive:0 "Watchful Counterespionage"
  first_comms_defensive_desc:0 "Our espionage targets view us with a great deal of suspicion, having only recently first met us."
- first_contact_speak_like_us_spynetwork:0 "Speak Like Us"
+ first_contact_speak_like_us_spynetwork:0 "พูดเหมือนเรา"
  first_contact_speak_like_us_country:0 "Riddles Decoded"
  first_contact_speak_like_us_country_desc:0 "Our experience in decoding riddles sent to us by a particularly confusing civilization has allowed us to strengthen our protocols for first encounters."
  universal_translator:0 "Universal Translator"
