--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -275,10 +275,10 @@
  councilor_master_salvager_female: "$councilor_master_salvager$"
  councilor_master_salvager_desc: "$master_salvager_desc$"
  councilor_master_salvager_unlock_title: "§HCouncil Position from the [salvager_enclave_country.GetName]§!"
- councilor_master_salvager_conditional_tooltip: "Leader has the §Y$leader_trait_master_salvager$§! Trait."
+ councilor_master_salvager_conditional_tooltip: "ผู้นำมีคุณลักษณะ §Y$leader_trait_master_salvager$§!"
  unlocks_salvager_council_position: "\n§Eปลดล็อกตำแหน่งในสภา:§!\n§H$t$$councilor_master_salvager$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$MOD_COUNTRY_SCAVENGE_DEBRIS_MULT$: §G+10%§!\n$ttt$$MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_MULT$: §G+2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$scientist_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_master_salvager_conditional_tooltip$"
  master_salvager_already_bought: "§RWe have already purchased the services of a $master_salvager$.§!"
- master_salvager_explanation: "\nWe will hire a Level 5 Scientist with the §Y$leader_trait_master_salvager$§! Trait."
+ master_salvager_explanation: "\nเราจะจ้างนักวิทยาศาสตร์ เลเวล 5 พร้อมกับคุณลักษณะ §Y$leader_trait_master_salvager$§!"
  enclave.360.name:0 "Reclaimed Bounty"
  enclave.360.intro:0 "A train of cargo barges has just arrived from the §Y[salvager_enclave_country.GetName]§!, carrying a consignment of reclaimed resources."
  enclave.360.a.desc:1 "$enclave.360.intro$\n\nThe Salvagers enclosed a message expressing their thanks, as well as a tangible gift - some form of kinetic artwork. The way it moves within our artificial gravity fields is unnerving, and yet quite captivating."
@@ -770,7 +770,7 @@
  decision_shroudwalker_teacher_losing_modifier:0 "§RAny other planet with the §YShroudwalker Teacher§! planet modifier will lose it.§!"
  shroudwalker_teacher_buy_more_than_one:0 "§RWe can at most have one active §YShroudwalker Teacher§! at a time.§!"
  shroud_beacon_active_tooltip:0 "The [Root.GetName] has an active §YShroud Beacon§!."
- shroudwalker_teacher_explanation:2 "\nWe will hire a Level 5 Official with the §Y$leader_trait_shroudwalker$§! Trait."
+ shroudwalker_teacher_explanation:2 "\nเราจะจ้างเจ้าหน้าที่ เลเวล 5 พร้อมกับคุณลักษณะ §Y$leader_trait_shroudwalker$§!"
  enclave.7250.desc:0 "Zro is of particular interest to us. We could teach you the ways of harvesting and storing it, but only if you agree to give us a share of your production. In perpetuity."
  enclave.7250.a:0 "You'll get your share. Teach us."
  enclave.7255.desc:0 "Zro is a wonderful yet tragic substance. It has many applications, but should never be used lightly, for it is the last legacy of a most venerable species. Harvest it, treasure it, and don't forget to pay us what you owe."
@@ -784,7 +784,7 @@
  councilor_shroudwalker_teacher_female: "$councilor_shroudwalker_teacher$"
  councilor_shroudwalker_teacher_desc: "An adept of the [shroudwalker_enclave_country.GetName] serves on the council, instructing in the ways of the Shroud."
  councilor_shroudwalker_teacher_unlock_title: "§HCouncil Position from the [shroudwalker_enclave_country.GetName]§!"
- councilor_shroudwalker_teacher_conditional_tooltip: "Leader has the §Y$leader_trait_shroudwalker$§! Trait."
+ councilor_shroudwalker_teacher_conditional_tooltip: "ผู้นำมีคุณลักษณะ §Y$leader_trait_shroudwalker$§!"
  unlocks_shroudwalker_council_position: "\n§EAllows the unlocking of Council Position:§!\n§H$t$$councilor_shroudwalker_teacher$§!\n$tt$$COUNCIL_POSITION_MODIFIER_BASE$\n$ttt$$mod_category_psionics_draw_chance_mult$: §G+5%§!\n$ttt$$mod_country_unity_produces_mult$ §G+1%§!\n$ttt$$mod_shroud_delve_cost$: §G-2%§!\n$COUNCIL_POSITION_AVAILABLE_FOR$$t$$official_with_icon$\n\n$COUNCIL_POSITION_REQUIREMENTS$$councilor_shroudwalker_teacher_conditional_tooltip$"
  enclave.8000.name: "Attack on [FROM.GetName]"
  enclave.8000.start: "Following our attack on the [FROM.GetName], [root.GetTitle] §Y[root.GetName]§! has left our borders. [root.GetHeSheCap] recorded a message upon [root.GetHisHer] departure."
