--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -245,7 +245,7 @@
  TRIGGER_IS_NOT_LEASED:0 "Fleet $FLEET|Y$ is NOT leased"
  TRIGGER_LEASE_DAYS:0 "Fleet $FLEET|Y$ lease days $COMPARE$ $VALUE|Y$"
  TRIGGER_LEASE_DAYS_NOT:0 "Fleet $FLEET|Y$ lease days NOT $COMPARE$ $VALUE|Y$"
- resolution_category_defenseprivatization:0 "Defense Privatization"
+ resolution_category_defenseprivatization:0 "การแปรรูปกลาโหม"
  resolution_defenseprivatization_repeal_1:0 "§RRepeal $resolution_defenseprivatization_defense_contracts$§!"
  resolution_defenseprivatization_repeal_1_desc:0 "While the professionalism of defense contractors is undeniable, the empires of the [global_event_country.GetGalCommunityOrGalImperium] should not rely too heavily on private peacekeeping."
  resolution_defenseprivatization_repeal_2:0 "§RRepeal $resolution_defenseprivatization_private_support_troops$§!"
@@ -300,8 +300,8 @@
  galcom_is_subject:0 "เป็นบริวาร"
  galcom_is_overlord:0 "Is an Overlord"
  suzerains_sovereignty:1 "Suzerains and Sovereignty"
- resolution_category_intergalacticdirective:0 "Intergalactic Directives"
- resolution_category_bureaucraticsurveillance:0 "Bureaucratic Surveillance"
+ resolution_category_intergalacticdirective:0 "คำสั่งอินเตอร์กาแล็กติก"
+ resolution_category_bureaucraticsurveillance:0 "การตรวจตราดูแลระบบราชการ"
  resolution_intergalacticdirective_regulated_growth:0 "Regulated Growth"
  resolution_intergalacticdirective_regulated_growth_desc:0 "By regulating the borders of the member nations we can secure a safer and fairer galaxy for all. Though some might find the bureaucracy stifling, it is for the betterment of us all."
  resolution_intergalacticdirective_ensured_sovereignty:0 "Ensured Sovereignty"
