--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -38,8 +38,8 @@
  COUNCIL_VIEW_UNLOCK_COUNCILOR_HEADER:0 "ตำแหน่งในสภา"
  COUNCIL_LEGITIMACY:0 "ความชอบธรรมของสภา"
  COUNCIL_LEGITIMACY_TOOLTIP_HEADER:0 "§H$COUNCIL_LEGITIMACY$§!\n"
- COUNCIL_LEGITIMACY_TOOLTIP_EFFECT: "Based on Faction Approval throughout the Empire, §H$COUNCIL_LEGITIMACY$§! affects the ability of the Council to enact Agendas.\n\nCurrent $COUNCIL_LEGITIMACY$: $LEGITIMACY|Y%$\n\n§EEffects:§!$TABBED_NEW_LINE$$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$: $AGENDA_SPEED$"
- COUNCIL_LEGITIMACY_TOOLTIP_DESC:2 "§E$COUNCIL_LEGITIMACY$ above §Y50%§! will provide a bonus to Monthly Agenda Progress, while $COUNCIL_LEGITIMACY$ below §Y50%§! will provide a penalty to Monthly Agenda Progress!§!"
+ COUNCIL_LEGITIMACY_TOOLTIP_EFFECT: "ขึ้นอยู่กับการเห็นชอบของฝ่ายต่างๆทั้งจักรวรรดิ, §H$COUNCIL_LEGITIMACY$§! มีผลต่อความสามารถของสภาในการออกแผนการวาระต่างๆ\n\n$COUNCIL_LEGITIMACY$ในปัจจุบัน: $LEGITIMACY|Y%$\n\n§Eผล:§!$TABBED_NEW_LINE$$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$: $AGENDA_SPEED$"
+ COUNCIL_LEGITIMACY_TOOLTIP_DESC:2 "§E$COUNCIL_LEGITIMACY$ มากกว่า §Y50%§! จะให้โบนัสกับความคืบหน้าของแผนรายเดือน ในขณะที่ $COUNCIL_LEGITIMACY$ ต่ำกว่า §Y50%§! จะให้โทษกับความคืบหน้าของแผนรายเดือน!§!"
  COUNCIL_LEGITIMACY_TOOLTIP_FACTION_INFO:1 "[Root.HasEthicIcon] §Y$NAME$§!"
  DEMAND_FULFILLED:0 "£dot_green£$NAME$: $VALUE|0+$"
  DEMAND_UNFULFILLED:0 "£dot_red£$NAME$: $VALUE|0+$"
@@ -153,10 +153,10 @@
  TRAIT_AVAILABLE_FOR:0 "มีให้สำหรับ: "
  UNLOCKS_AGENDA:1 "§Yปลดล็อกแผนการ:§!"
  TECH_UNLOCK_AGENDA:0 "$UNLOCKS_AGENDA$ $NAME$"
- TIME_TO_COMPLETE_AGENDA:1 "£time£$MONTHS|Y$ months before Agenda is ready to launch"
- MONTHLY_AGENDA_PROGRESS: "Monthly Agenda Progress: $MONTHLY_PROGRESS|Y$\n$t$From Council: $FROM_COUNCIL|Y$"
+ TIME_TO_COMPLETE_AGENDA:1 "£time£$MONTHS|Y$ เดือนก่อนที่แผนการจะพร้อม"
+ MONTHLY_AGENDA_PROGRESS: "ความคืบหน้าของแผนรายเดือน: $MONTHLY_PROGRESS|Y$\n$t$จากสภา: $FROM_COUNCIL|Y$"
  AGENDA_SPEED_LEGITIMACY_MODIFIER: "$t$$COUNCIL_LEGITIMACY$: $MODIFIER$"
- AGENDA_PROGRESS: "Total Agenda Progress: $PROGRESS|0Y$/$COST|0Y$"
+ AGENDA_PROGRESS: "ความคืบหน้าของแผนการทั้งหมด: $PROGRESS|0Y$/$COST|0Y$"
  AGENDA_COST_TITLE:0 "ค่าใช้จ่ายของแผน:"
  AGENDA_BASE_COST:0 "ค่าใช้จ่ายพื้นฐาน: $COST|Y$"
  AGENDA_COST_INCREASE_FROM_SPRAWL:1 "Increased Cost from $EMPIRE_SIZE$: $SPRAWL$"
@@ -211,9 +211,9 @@
  NAVAL_BATTLE_WON_TXT:0 "£military_ship£ §Eส่งผลเมื่อชนะ§! §Yการรบในอวกาศ§!"
  SCIENCE_SHIP_EFFECTS_TXT:0 "§Eมีผลต่อ§! £science_ship£ §Yยานวิจัยวิทยาศาสตร์§!"
  ARMY_EFFECTS_TXT:0 "§Eมีผลต่อ§! £army_ship£ §Yกองทัพบก§!"
- PLANET_EFFECTS_TXT:0 "§Eมีผลต่อ§! £planet£ §Yดาวเคราะห์§!"
- GALCOM_EFFECTS_TXT: "£diplo_weight£ $GALCOM_NAME|Y$ §EEmissary Effects§!"
- FEDERATION_EFFECTS_TXT: "£federation£ $FEDERATION_NAME|Y$ §ERepresentative Effects§!"
+ PLANET_EFFECTS_TXT:1 "§Eมีผลต่อ§! £planet£ §Yการปกครองดาวเคราะห์§!"
+ GALCOM_EFFECTS_TXT: "§Eมีผลเมื่อเป็นผู้แทนใน§! £diplo_weight£ $GALCOM_NAME|Y$"
+ FEDERATION_EFFECTS_TXT: "§Eผลเมื่อเป็นผู้แทนใน§! £federation£ $FEDERATION_NAME|Y$"
  BACKGROUND_PLANET_EFFECTS_TXT: "§Eมีผลต่อ§! £planet£ §Yดาวบ้านเกิด§!"
  BACKGROUND_PLANET_NAME_EFFECTS_TXT: "§Eมีผลต่อ§! £planet£ §Yดาวบ้านเกิด§! ($PLANET|Y$)"
  PLANET_EFFECTS_WHILE_DEFENDING_TXT:0 "§Eส่งผลขณะป้องกัน§! £planet£ §Yดาวเคราะห์§!"
@@ -222,7 +222,7 @@
  SYSTEM_EFFECTS_WHILE_DEFENDING_TXT:0 "§Eส่งผลขณะป้องกัน§! £system£ §Yระบบดาว§!"
  CAPITAL_SYSTEM_EFFECTS_TXT:1 "ส่งผลกับ £system£ §Yระบบดาวศูนย์กลาง§!"
  ASSIST_RESEARCH_EFFECTS_TXT:0 "มีผลต่อ £planet£ §Yดาวเคราะห์§! §Eส่งผลขณะ§! §Yวิจัย§!"
- SECTOR_EFFECTS_TXT:0 "£sector£ §Yเซ็กเตอร์§! §Eผลเมื่อปกครองศูนย์กลางของเซ็กเตอร์§!"
+ SECTOR_EFFECTS_TXT:1 "§Eมีผลต่อ§! £sector£ §Yการปกครองเซ็กเตอร์§!"
  EVERY_ENEMY_SHIP_DESTROYED_TXT: "For Every Enemy Empire Ship Destroyed"
  EVERY_ARMY_KILLED_TXT: "For Every Enemy Army Killed in Combat"
  alert_unassigned_leader_title:0 "ผู้นำที่ว่าง"
@@ -600,7 +600,7 @@
  GOTO_LEADER:0 "§H$GOTO$§! §GGo to the Leader.§!"
  LEADER_UI_DISMISS_ENABLED:0 "ปลด §Y$LEADER_NAME$§!"
  LEADER_BACKGROUND_DESC:0 "§Y[Root.GetName]§! มีหลักจริยธรรม [Root.An_Ethic_Class] จาก [Root.GetHomeWorldBiome] ของ §Y$PLANET$§! ที่ซึ่ง [Root.GetSheHe]เคยดำรงตำแหน่งเป็น §Y$JOB$§!"
- LEADER_ETHIC:0 "§Hจริยธรรม§!\n$ETHIC|Y$\n$SEPARATOR$\n§Eในขณะที่ผู้นำ §Yสภา§! §Hให้การดึงดูดจริยธรรม§! §Y$@council_ethic_attraction|%0$§! ต่อจริยธรรมของเขา§!"
+ LEADER_ETHIC:0 "§Hจริยธรรม§!\n$ETHIC|Y$\nผู้นำคนนี้จะให้ต่อไปนี้ §Hให้การดึงดูดจริยธรรม:\n\n§!$EMPIRE_EFFECTS_TXT$:$TABBED_NEW_LINE$ ดึงดูดจริยธรรม $ETHIC$ §G$@council_ethic_attraction|%0$§!\n\n$PLANET_EFFECTS_TXT$:$TABBED_NEW_LINE$ ดึงดูดจริยธรรม $ETHIC$ §G50%§!\n\n$SECTOR_EFFECTS_TXT$:$TABBED_NEW_LINE$ ดึงดูดจริยธรรม $ETHIC$ §G25%§!"
  ETHIC_A:0 ""
  ETHIC_AN:0 ""
  BACKGROUND_A_CLASS:0 "[Root.Class_A_An] [Root.GetClass]"
@@ -658,7 +658,7 @@
  LEADER_CAP_TOTAL:1 "ความจุ $CLASS_WITH_ICON$ ทั้งหมด: $VALUE|Y$"
  LEADER_COST_FROM_CAP_MULT:1 "Over $CLASS_WITH_ICON$ Cap: $VALUE$"
  LEADER_CAPACITY_SHORT_DESCRIPTION:1 "We can effectively support up to $LEADER_CAP|Y$ $CLASS_PLURAL$. We currently have $LEADER_CAP_USAGE$."
- LEADER_CAPACITY_LONG_DESCRIPTION:1 "§EExceeding your §H$CLASS$ Capacity§! will add increasingly severe penalties on §H$UPKEEP$§! and §HExperience§! gain for all your $CLASS_PLURAL$. §H$CLASS$ Capacity§! can be increased by unlocking certain §HTraditions§!, §HTechnologies§! or by reforming your §HGovernment Authority§!§!."
+ LEADER_CAPACITY_LONG_DESCRIPTION:1 "§E§Hความจุ$CLASS$§! เกินกำหนดจะทำให้เพิ่มโทษที่รุนแรงมากขึ้นใน §H$UPKEEP$§! และค่า §Hประสบการณ์§! ที่ได้รับ สำหรับ$CLASS_PLURAL$ของคุณทุกคน §Hความจุ$CLASS$§! สามารถเพิ่มได้โดยการปลดล็อก §Hวัฒนธรรม§!, §Hเทคโนโลยี§! หรือโดยการปฏิรูป §Hระบอบการปกครอง§! ของคุณ§!"
  LEADER_CAPACITY_PENALTY_HEADER:1 "§HCurrent Penalties§!"
  LEADER_CAPACITY_PENALTY:1 "The upkeep of your $CLASS_PLURAL$ is increased by $UPKEEP$, and $CLASS_PLURAL$ gain $EXPERIENCE$ less experience due to being over your $CLASS$ Capacity."
  not_councilor_warning:0 "$TRIGGER_FAIL$ §Rคุณสมบัติของสภาจะมีผลก็ต่อเมื่อผู้นำได้รับการแต่งตั้งให้ดำรงตำแหน่งในสภาเท่านั้น§!"
@@ -701,7 +701,7 @@
  leader_trait_gifted_desc:1 "This leader has a quick mind, grasping demanding concepts with ease."
  trait_imperial_heir:1 "[triggered_imperial_name]"
  trait_imperial_heir_desc:1 "[triggered_imperial_desc]"
- trait_imperial_heir_effects: "$t$§RBlocks selection of non-Council leader traits§!"
+ trait_imperial_heir_effects: "$t$§Rบล็อกการเลือกคุณลักษณะที่ไม่ใช่ผู้นำในสภา§!"
  imperial_heir:0 "รัชทายาท"
  imperial_heir_desc:0 "The heir is next in line to rule the Empire."
  imperial_ruler:0 "ผู้ปกครองอิมพีเรียล"
@@ -902,12 +902,12 @@
  leader_trait_archaeologist_3_desc:0 "$leader_trait_archaeologist_desc$"
  leader_trait_prospector:0 "นักสำรวจ"
  leader_trait_prospector_desc:1 "This leader has a set of self-built, powerful scanners, which can find even the deepest deposits when surveying galactic objects."
- leader_trait_prospector_base_effect: "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$On Completing Survey:\n$tt$ Chance to increase Resource Deposit Size:"
- leader_trait_prospector_effect:2 "$leader_trait_prospector_base_effect$ §G+5%§!"
+ leader_trait_prospector_base_effect: "$SCIENCE_SHIP_EFFECTS_TXT$:\n$t$เมื่อเสร็จสิ้นการสำรวจ:\n$tt$ โอกาสในการเพิ่มขนาดแหล่งทรัพยากร:"
+ leader_trait_prospector_effect:3 "$leader_trait_prospector_base_effect$ §G+20%§!"
  leader_trait_prospector_2:0 "$leader_trait_prospector$ II"
  leader_trait_prospector_2_desc:0 "$leader_trait_prospector_desc$"
- leader_trait_prospector_2_effect:2 "$leader_trait_prospector_base_effect$ §G+10%§!"
- leader_trait_prospector_3_effect:2 "$leader_trait_prospector_base_effect$ §G+15%§!"
+ leader_trait_prospector_2_effect:3 "$leader_trait_prospector_base_effect$ §G+35%§!"
+ leader_trait_prospector_3_effect:3 "$leader_trait_prospector_base_effect$ §G+50%§!"
  leader_trait_slippery:1 "นักหลบเลี่ยง"
  leader_trait_slippery_desc:1 "Exploring the unknown is a dangerous task. This leader upgraded [Root.GetHisHer] ship with additional fail-safe systems and automatic FTL-disengagement protocols."
  leader_trait_tuner:1 "จูนเนอร์"
@@ -978,9 +978,9 @@
  leader_trait_gale_speed_2_desc:0 "$leader_trait_gale_speed_desc$"
  leader_trait_aggressive_2:0 "$leader_trait_aggressive$ II"
  leader_trait_aggressive_2_desc:0 "$leader_trait_aggressive_desc$"
- leader_trait_artillerist:0 "Artillerist"
+ leader_trait_artillerist:0 "ทหารปืนใหญ่"
  leader_trait_artillerist_desc:1 "This leader favors heavy ordinance and alpha strike techniques."
- leader_trait_artillerist_2:0 "Artillerist II"
+ leader_trait_artillerist_2:0 "ทหารปืนใหญ่ II"
  leader_trait_artillerist_2_desc:0 "$leader_trait_artillerist_desc$"
  leader_trait_annihilator:0 "นักทำลายล้าง"
  leader_trait_annihilator_desc:1 "This leader focuses on the quick destruction of planetary defenses."
@@ -1063,7 +1063,7 @@
  leader_trait_artillery_specialization_desc:1 "This leader favors long-range engagement with artillery playing the main role in their fleet."
  leader_trait_carrier_specialization:0 "โฟกัสยานแม่"
  leader_trait_carrier_specialization_desc:1 "This leader favors small strike crafts and screening ships to protect their valuable carriers."
- leader_trait_rocketry_specialization:0 "Guidance System Focus"
+ leader_trait_rocketry_specialization:0 "โฟกัสระบบนำวิถี"
  leader_trait_rocketry_specialization_desc:1 "This leader favors missile strikes above all else, aiming at delivering a devastating blow to enemy fleets."
  leader_trait_gunship_specialization:0 "Gunship Focus"
  leader_trait_gunship_specialization_desc:1 "This leader favors point-blank engagements, hoping to neutralize the enemy's long-range weapons."
@@ -1238,7 +1238,7 @@
  leader_trait_supreme_admiral_desc:1 "Excelling at logistic and strategic planning, this admiral is able to command fleets that would overburden their lesser peers."
  leader_trait_armorer:0 "Genius Armorer"
  leader_trait_armorer_desc:1 "This leader has devised new ways to harden armor. There are few weapons in the galaxy that can penetrate the hulls of ships constructed with [Root.GetHisHer] designs."
- leader_trait_military_overseer:0 "Military Overseer"
+ leader_trait_military_overseer:0 "ผู้ควบคุมดูแลการทหาร"
  leader_trait_military_overseer_desc:1 "Naval organization is a difficult task, requiring careful planning and impeccable standards. This leader's experience is an invaluable asset in building an efficient navy."
  leader_trait_master_gunner:0 "Master Gunner"
  leader_trait_master_gunner_desc:1 "An admiral with a heavy focus on weapons development, they always keep both their person and their guns in pristine working order."
@@ -1298,7 +1298,7 @@
  leader_trait_instrument_chosen:0 "ผู้ถูกเลือกจากผู้บรรเลงดนตรี"
  leader_trait_instrument_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
  planet_anglers:0 "Angler Jobs"
- mod_planet_anglers_produces_mult:0 "£job_angler£ Angler Output"
+ mod_planet_anglers_produces_mult:0 "ผลผลิต £job_angler£ นักตกปลา"
  mod_shipclass_military_build_speed_mult:0 "ความเร็วการสร้างยานทางทหาร"
  mod_ship_science_alloys_upkeep_add:0 "ยานวิจัยวิทยาศาสตร์มีค่าบำรุงรักษาที่เป็น £alloys£ โลหะผสม"
  mod_salvage_chance_add:0 "Chance to Salvage Ships"
