--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -163,9 +163,9 @@
  leader_trait_annihilator_hive_desc:1 "This drone focuses on the quick destruction of planetary defenses, razing fortresses to the ground."
  leader_trait_annihilator_machine:0 "นักทำลายล้าง"
  leader_trait_annihilator_machine_desc:1 "This unit focuses on the quick destruction of planetary defenses, razing fortresses to the ground."
- leader_trait_artillerist_hive:0 "Artillerist"
+ leader_trait_artillerist_hive:0 "ทหารปืนใหญ่"
  leader_trait_artillerist_hive_desc:0 "This drone's ability to operate the fleet's weapon systems is extremely accurate and deadly."
- leader_trait_artillerist_machine:0 "Artillerist"
+ leader_trait_artillerist_machine:0 "ทหารปืนใหญ่"
  leader_trait_artillerist_machine_desc:0 "This unit's ability to operate the fleet's weapon systems is extremely accurate and deadly."
  leader_trait_artillerist_2_hive:0 "$leader_trait_artillerist_hive$ II"
  leader_trait_artillerist_2_hive_desc:0 "$leader_trait_artillerist_hive_desc$"
