--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -44,7 +44,7 @@
  allow_edict_consectrated_worlds:5 "§Hปลดล็อกการตัดสินใจ:§! ดาวศักดิ์สิทธิ์\n"
  describe_edict_consectrated_worlds:5 "§Eทำดาวเคราะห์ที่ไม่มีใครอยู่ให้เป็นดาวศักดิ์สิทธิ์ (สูงสุดที่ §Y3§!) เพิ่ม §Yแรงดึงดูดจริยธรรมจิตวิญญาณ§! และ §Yความอยู่ดีกินดีทั่วทั้งจักรวรรดิ§! เช่นเดียวกับ £unity£ §Yการสร้างเอกภาพ§! ตามระดับความศักดิ์สิทธิ์ของดาวเคราะห์ (เมื่อทำเสร็จแล้ว)§!"
  allow_machine_worlds:2 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! ดาวเครื่องจักร"
- describe_machine_worlds:6 "- §Yดาวเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§!\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
+ describe_machine_worlds:6 "- §Yดาวเครื่องจักร§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อสิ่งมีชีวิตส่วนใหญ่ แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§!\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวเครื่องจักร§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§! และ §Yการใช้ที่อยู่อาศัย§! ลดลง §G10%§! \n- เขต £district£ §Yเขตเกษตรกรรม§! บนดาวจะถูกทำลาย"
  allow_hive_worlds:0 "§Hปลดล็อกตัวเลือกการปรับสภาพดาว:§! ดาวที่เป็นรัง"
  describe_hive_worlds:1 "- §Yดาวที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
  ALLOW_PSI_CORPS:1 "ปลดล็อกสิ่งปลูกสร้าง: §Y$building_psi_corps$§!"
