--- a/mod/thmod/localisation/english/lithoids_l_english.yml
+++ b/mod/thmod/localisation/english/lithoids_l_english.yml
@@ -53,9 +53,9 @@
  reduce_living_metal_output: "Inefficient $sr_living_metal$ Extraction"
  reduce_living_metal_output_desc: "We are extracting $sr_living_metal$ without the requisite technology."
  reduce_living_metal_output_tt: "$mod_station_gatherers_sr_living_metal_produces_mult$ §R-75%§!"
- mod_station_gatherers_exotic_gases_produces_mult: "$mining_station$ $exotic_gases$ Output"
- mod_station_gatherers_rare_crystals_produces_mult: "$mining_station$ $rare_crystals$ Output"
- mod_station_gatherers_volatile_motes_produces_mult: "$mining_station$ $volatile_motes$ Output"
- mod_station_researchers_sr_zro_produces_mult: "$research_station$ $sr_zro$ Output"
- mod_station_researchers_sr_dark_matter_produces_mult: "$research_station$ $sr_dark_matter$ Output"
- mod_station_gatherers_sr_living_metal_produces_mult: "$mining_station$ $sr_living_metal$ Output"
+ mod_station_gatherers_exotic_gases_produces_mult: "ผลผลิต $mining_station$ $exotic_gases$"
+ mod_station_gatherers_rare_crystals_produces_mult: "ผลผลิต $mining_station$ $rare_crystals$"
+ mod_station_gatherers_volatile_motes_produces_mult: "ผลผลิต $mining_station$ $volatile_motes$"
+ mod_station_researchers_sr_zro_produces_mult: "ผลผลิต $research_station$ $sr_zro$"
+ mod_station_researchers_sr_dark_matter_produces_mult: "ผลผลิต $research_station$ $sr_dark_matter$"
+ mod_station_gatherers_sr_living_metal_produces_mult: "ผลผลิต $mining_station$ $sr_living_metal$"
