--- a/mod/thmod/localisation/english/necroids_l_english.yml
+++ b/mod/thmod/localisation/english/necroids_l_english.yml
@@ -30,7 +30,7 @@
  mod_job_necro_apprentice_per_pop:0 "§G+1§! อาชีพ $job_necro_apprentice$ ต่อ $VALUE$ ประชากร"
  mod_job_necro_apprentice_per_pop_short:1 "\n§G+1§! £mod_job_apprentice_add£ per $VALUE$ £pop£"
  planet_necro_apprentices:0 "Necrophyte Jobs"
- POP_ATTRACTION_NECROPHAGE_NEG:0 "§R- £pop£ Pop is a Necrophage and procreates by consuming other species§!"
+ POP_ATTRACTION_NECROPHAGE_NEG:0 "§R- £pop£ ประชากรเป็นเนโครเฟจและสืบพันธุ์โดยการกินเผ่าพันธุ์อื่น§!"
  RULER_JOB_NECROPHAGE_TRIGGER:0 "This job can only be worked by Free Necrophage Pops that are not being purged."
  opinion_necrophage:1 "รูปร่างน่าพิศวง"
  opinion_necrophage_our_species:0 "Necrophaged our Species"
